# 2025_20645251

./: .gitignore  README.md  adder_8h.html  adder_8h_source.html  git-cheat-sheet.txt  hi_and_date.cmd  index.html
.github/workflows/: deploy.yml
worksheet3/: calc.cpp  hello.cpp  libadder.exp
worksheet3/adder_dynamic/include/: adder.h
worksheet3/adder_static/lib/: libadder.lib
worksheet4/: CMakeLists.txt
worksheet4/Calc/: CMakeLists.txt  calc.cpp
worksheet4/Calc/Dynamic Release/include/: adder.h
worksheet4/Calc/Release/include/: adder.h
worksheet5/: CMakeLists.txt  adder.cpp  adder.h
worksheet6/worksheet6_application/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.h  optiondialog.ui
worksheet7/exercise3/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp
